test/should_pass/basic_203.grg
actions basic_203;

rule r {
	pattern {
		negative {
			if{ false; }
		}
	}
	modify {
	}
}

