test/should_fail/annot_001.grg
actions annot_001;

rule r {
	pattern {
		[prio=42];
	}
	modify {}
}
